--- a/resources/site-theme/votebeat/scss/components/_slide.scss
+++ b/resources/site-theme/votebeat/scss/components/_slide.scss
@@ -29,10 +29,10 @@
     height: 40%;
   }
   .slick-next {
-    right: -25px !important;
+    right: -35px !important;
   }
   .slick-prev {
-    left: -10px !important;
+    left: -20px !important;
   }
 
   .slick-prev,
